test/compilable/test19750.d
// REQUIRED_ARGS: -Icompilable/imports

import test19750b;
class Foo {
  import test19750a;
  void func (Bar ) {}
}
