test/fail_compilation/fail5851.d
// REQUIRED_ARGS: -de

class Foo
{
    Object o;
    alias o this;
}

void main()
{
}
